--- a/spring-boot-consumer/src/main/resources/application.properties
+++ b/spring-boot-consumer/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:file:~/some-db-service;DB_CLOSE_ON_EXIT=FALSE;
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
